<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soundfound.activities.RegisterActivity">

    <EditText
        android:id="@+id/email_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reg_email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="58dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginEnd="84dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reg_password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email_register_text"
        android:layout_marginEnd="84dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        android:layout_marginEnd="84dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:layout_marginEnd="148dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="166dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
